# model_repo_template

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  repo_readme_template.md
data/: README.md
src/: README.md
test/: 01_climatology.ipynb  README.md
