[project]
name = "cao-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.6.3",
    "cartopy>=0.24.1",
    "dask>=2025.2.0",
    "distributed>=2025.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "psutil>=7.0.0",
    "scipy>=1.15.2",
    "xarray>=2025.1.2",
]
